--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -24,3 +24,10 @@ body {
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
+
+ .container {
+  margin: 0 auto;
+  width: 90%;  
+  display: flex;
+  flex-direction: column;
+} 
