Implemented character counter with excess tweet warning, disabled textarea resizing

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -8,6 +8,7 @@ textarea {
   border:none;
   background-color:#f4f1ec;
   width: 100%;
+  resize: none;
   border-bottom :5px solid black
 }
 
@@ -38,3 +39,7 @@ output {
   font-family: 'Bungee';
   color:#545149;
 } 
+
+.counterRed {
+  color: #d41e27;
+}
