--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,10 +1,13 @@
 nav {
   width: 100%;
+  position: fixed;
+  top: 0;
   height: 120px;
   display: flex;
   align-items: center;
   background-color:	#4056A1;
   padding: 0 1.5em;
+  z-index: 1;
 }
 
 span {
