--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -1,6 +1,5 @@
 article.tweet {
   margin: 40px 0 10px 0 !important;
-  border-radius: 5px;
   border: 5px solid #545149;
   margin: 0
 }
@@ -40,13 +39,13 @@ article.tweet h3.userName {
 article.tweet span.userId {
   color: #4056A1;
   font-family: 'Source Sans Pro', sans-serif;
-  opacity: 0.5;
-  font-weight: 400;
+  opacity: 0;
+  font-weight: 300;
 }
 
 article.tweet p {
   margin: 20px;
-  font-weight: 600;
+  font-weight: 400;
   padding-bottom: 35px;
   border-bottom: 4px solid #545149;
 }
@@ -59,7 +58,7 @@ article.tweet footer {
 
 
 article.tweet footer > p {
-  font-weight: 600;
+  font-weight: 400;
   font-size: 0.7em;
   padding: 5px;
   margin-top: 0px;
@@ -76,7 +75,8 @@ article.tweet .tweet-buttons {
   margin-bottom: 13px;
 }    
 
-article.tweet .tweet-buttons ion-icon {
+article.tweet .tweet-buttons fav-icon {
   margin-left: 6px;
+  font-weight: 300;
   cursor: pointer;
 }
