--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -4,6 +4,7 @@ nav {
   top: 0;
   height: 120px;
   display: flex;
+  justify-content: space-between;
   align-items: center;
   background-color:	#4056A1;
   padding: 0 1.5em;
@@ -14,3 +15,11 @@ span {
   font-family: 'Bungee';
   color: #FFFFFF;
 } 
+
+.compose-tweet {
+  border: 0;
+  padding: 0;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 400;
+  color: #FFFFFF;
+}
