--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -16,10 +16,11 @@ span {
   color: #FFFFFF;
 } 
 
-.compose-tweet {
+p {
   border: 0;
   padding: 0;
   font-family: 'Source Sans Pro', sans-serif;
-  font-weight: 400;
+  font-weight: 300;
   color: #FFFFFF;
+  cursor: pointer;
 }
