--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -26,6 +26,7 @@ article.tweet header div {
 
 article.tweet header img {
   border-radius: 5px;
+  opacity: 0.6;
   float: left;
 }
 
@@ -103,4 +104,8 @@ article.tweet:hover p {
 
 article.tweet:hover .tweet-buttons {
   font-size: 17px;
+}
+
+article.tweet:hover header img {
+  opacity: 1;
 }
