--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -15,21 +15,36 @@ html {
  * Global layout stuff
  */
 
+ h1, h2, h3, h4, h5, h6, span {
+  margin: 0;
+  padding: 0;
+}
+
+
 body {
   color: #545149;
   background-color: #f4f1ec;
-  font-size: 24px;
-  font-family: 'Source Sans Pro', sans-serif;
-  position: relative;
 }
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
 
- .container {
-  margin: 0 auto;
-  width: 90%;  
+ main {
+  margin: auto;
+  width: 90vw;
+  background-color: #f4f1ec;
   display: flex;
-  flex-direction: column;
-} 
+  flex-direction: column; 
+ }
+
+  /* Laptops / Desktops: minimum width of 1024px */
+  @media only screen and (min-width: 1024px) {
+    body {
+      display: flex;
+    }
+    main {
+      margin-top: 5rem;
+      padding: 2rem;
+    }
+  }
