--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,56 +1,82 @@
 .new-tweet {
-  padding-top: 35px;
+  padding-top: 1rem;
   display: none;
 }
 
 #ValidateError {
+  display: none;
+  text-align: center;
+  color: #d41e27;
+  padding: 0.25rem;
+  margin-bottom: 0.5rem;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 400;
+}
+
+form {
+  padding: 1rem 1rem;
   display: flex;
-  justify-content: center;
-  color: red;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+form label, textarea, div {
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 300;
 }
 
 label {
-  display: block;
-  background-color:#f4f1ec;
-  margin: 3px 0 3px 0;
+  margin-bottom: 0.25rem;
 }
 
 textarea {
-  border:none;
+  border: none;
   background-color:#f4f1ec;
   width: 100%;
   resize: none;
   border-bottom :5px solid black
 }
 
-.new-tweet div {
-  width: 100%;
+button {
+  font-family: 'Bungee', cursive; 
+  padding: 0.25rem 0.4rem;
+  margin-top: 0.25rem;
+  border: none;
+  border-radius: 4px;
+  color: #FFFFFF;
+  background-color: #4056A1;
+}
+
+.counter {
+  font-family: 'Bungee', cursive; 
+}
+
+button:hover {
+  cursor: pointer;
+  box-shadow: 3px 3px 6px 1px rgba(0, 0, 0, 0.3);
+}
+
+#tweet-text {
+  background-color: #f4f1ec;
+  border: 0;
+  outline: 0;
+  border-bottom: 2px solid #545149;
+  resize: none;
+  font-size: larger;
+}
+
+#form-btm {
   display: flex;
   justify-content: space-between;
-  padding: 20px 5px 0 5px;
 }
-
-.new-tweet h2 {
-  width: 100%;
-  display: flex;
-  margin: 5px 0 5px 0;
-}
-
-button {
-  display: flex;
-  align-items: flex-end;
-  font-family: 'Bungee';
-  color: #f4f1ec;
-  background-color:#4056A1
-}
-
-output {
-  display: block;
-  align-items: flex-end;
-  font-family: 'Bungee';
-  color:#545149;
-} 
 
 .counterRed {
   color: #d41e27;
+}
+
+/* mobile */
+@media only screen and (max-width: 768px) {
+  #tweet-text {
+    height: 4rem;
+  }
 }
