--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -7,6 +7,7 @@ html {
   box-sizing: border-box;
   scroll-behavior: smooth;
 }
+
 *, *:before, *:after {
   box-sizing: inherit;
 }
@@ -14,12 +15,10 @@ html {
 /*
  * Global layout stuff
  */
-
- h1, h2, h3, h4, h5, h6, span {
+h1, h2, h3, h4, h5, h6, span {
   margin: 0;
   padding: 0;
 }
-
 
 body {
   color: #545149;
@@ -30,21 +29,21 @@ body {
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
 
- main {
+main {
   margin: auto;
   width: 90vw;
   background-color: #f4f1ec;
   display: flex;
   flex-direction: column; 
- }
+}
 
-  /* Laptops / Desktops: minimum width of 1024px */
-  @media only screen and (min-width: 1024px) {
-    body {
-      display: flex;
-    }
-    main {
-      margin-top: 5rem;
-      padding: 2rem;
-    }
+/* Desktops/laptops: starting at 1024px */
+@media only screen and (min-width: 1024px) {
+  body {
+    display: flex;
   }
+  main {
+    margin-top: 5rem;
+    padding: 2rem;
+  }
+}
